--- a/app/globals.css
+++ b/app/globals.css
@@ -31,7 +31,7 @@
 
 @keyframes spin {
   to {
-      transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 .animate-spin {
@@ -42,4 +42,20 @@
   .container {
     @apply px-[1rem];
   }
+}
+
+.gradient-button {
+  background: radial-gradient(
+    78.75% 122.79% at 50% -61.61%,
+    #bba5f4 0%,
+    #5f33d6 100%
+  );
+}
+
+.gradient-button:hover {
+  background: radial-gradient(
+    65.85% 102.68% at 50% -8.93%,
+    #bba5f4 0%,
+    #5f33d6 100%
+  );
 }
